adding cock pit, particles, and game scene changes

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <style>
 body{margin:0px; padding:0px;background-color: #000}
 #container{background-color: #000}
+#cockpit{width:100%; z-index: 999999; position: absolute; top: 0; left: 0; opacity: 0.4}
 </style>
 <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 </head>
@@ -155,7 +156,7 @@ uniform vec2 uvScale;
 			}
 
 </script>
-
+<img src="images/cockpit1a.svg" id="cockpit" />
 <script src="bundle.js"></script>
 <script src="scripts/ParticleEngine.js"></script>
 </body>
