--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
     position:absolute;
     display:none;
     text-align:center;
+    z-index: 9;
+    display: none;
     }
     </style>
     <script type="text/javascript" src="scripts/tweenMax/src/minified/TimelineLite.min.js"></script>
@@ -64,10 +66,12 @@
     <img src="images/cockpit1a.svg" id="cockpit" class="unselectable" style="display:none" />
     <script type="text/javascript">
     function startFracVader(){
-    l = (($('body').width()/2) - ($('#logo').width()/2));
-    t = (($('body').height()/2) + ($('#logo').height()/2));
-    $('#logo').css({'left':l + 'px', 'top': t + 'px'});
+    $(function(
+        l = (($('body').width()/2) - ($('#logo').width()/2));
+        t = (($('body').height()/2) + ($('#logo').height()/2));
+        $('#logo').css({'left':l + 'px', 'top': t + 'px'});
         startFracIntro();
+    ));
     }
     var preload = new createjs.LoadQueue(false);
     preload.addEventListener("fileload", handleFileComplete);
@@ -78,7 +82,6 @@
     preload.loadFile('scripts/ParticleEngine.js');
     // Overall progress handler
     function handleOverallProgress(event) {
-        console.log('TOTAL: '+preload.progress);
         var perc = preload.progress*100;
         var lf = document.getElementById("loadingFill");
         TweenMax.to(lf,0.2,{width:perc+'%'});
