--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
     pointer-events: none;
     }
     #stats{
-        display: none;
+        display: block;
+        position: absolute;
+        z-index: 9999;
+
     }
     #logo{
     margin:auto;
